Fix on smaller devices

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -591,7 +591,7 @@ footer.sticky-bottom {
       }
 
       .abbr {
-        height: 2rem;
+        //height: 2rem;
         margin-bottom: 0.5rem;
 
         abbr {
@@ -612,12 +612,6 @@ footer.sticky-bottom {
         .award {
           color: var(--global-theme-color) !important;
           border: 1px solid var(--global-theme-color);
-        }
-      }
-
-      @media (max-width: 576px) {
-        .info {
-          width: 50%;
         }
       }
 
